--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,16 @@ install:
   - sudo dpkg -i pacman.deb
   - sudo dkp-pacman -Sy
   - sudo dkp-pacman -S devkitARM general-tools dstools ndstool libnds libfat-nds --noconfirm
+  - 
   - export DEVKITPRO=/opt/devkitpro
   - export DEVKITARM=${DEVKITPRO}/devkitARM
 
 script:
-  - cd retail/
+  - cd romsel_aktheme/
   - make
-  - cd ../hb/
+  - cd ../
+  - unzip libnds.zip
+  - sudo cp -r libnds/* /opt/devkitpro/libnds/
   - make
   
 addons:
