--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,12 @@ before_install:
 install:
   - sudo dpkg -i pacman.deb
   - sudo dkp-pacman -Sy
-  - sudo dkp-pacman -S devkitARM general-tools dstools ndstool libnds libfat-nds --noconfirm
+  - sudo dkp-pacman -S devkitARM general-tools dstools ndstool libnds libfat-nds grit mmutil --noconfirm
+  - git clone https://github.com/RocketRobz/libnds.git
+  - cd libnds/
+  - make install
+  - cd ..
+  - rm -r libnds/
   - 
   - export DEVKITPRO=/opt/devkitpro
   - export DEVKITARM=${DEVKITPRO}/devkitARM
@@ -31,7 +36,7 @@ script:
   - cd ../
   - unzip libnds.zip
   - sudo cp -r libnds/* /opt/devkitpro/libnds/
-  - make
+  - ./compile.sh
   
 addons:
   apt:
