--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,8 @@ addons:
 deploy:
   provider: releases
   overwrite: true
-  user: GITHUB_NAME
-  password: GITHUB_PASS
+  user: $GITHUB_NAME
+  password: $GITHUB_PASS
   file:
     - 7zfile/_nds/TWiLightMenu/dsimenu.srldr
   skip_cleanup: true
