WIP: Make more theme things be ini controlled

--- a/romsel_dsimenutheme/nitrofiles/themes/3ds/light/theme.ini
+++ b/romsel_dsimenutheme/nitrofiles/themes/3ds/light/theme.ini
@@ -1,16 +1,16 @@
 [THEME]
 StartBorderRenderY	= 92
-StartBorderSpriteW 	= 32
-StartBorderSpriteH 	= 64
+StartBorderSpriteW	= 32
+StartBorderSpriteH	= 64
 
-TitleboxRenderY 	= 96
+TitleboxRenderY	= 96
 
-BubbleTipRenderY 	= 98
-BubbleTipRenderX 	= 125
+BubbleTipRenderY	= 98
+BubbleTipRenderX	= 125
 BubbleTipSpriteH	= 7
 BubbleTipSpriteW	= 7
 
-RotatingCubesRenderY 	= 78
+RotatingCubesRenderY	= 78
 
 ShoulderLRenderY	= 172
 ShoulderLRenderX	= 0
@@ -18,10 +18,20 @@ ShoulderLRenderX	= 0
 ShoulderRRenderY	= 172
 ShoulderRRenderX	= 178
 
-VolumeRenderX		= 4
 VolumeRenderY		= 16
+VolumeRenderX		= 4
 
-BatteryRenderY 		= 5
+BatteryRenderY		= 5
 BatteryRenderX		= 235
 
-RenderPhoto = 0
+DateRenderY				= 7
+DateRenderX				= 162
+TimeRenderY				= 7
+TimeRenderX				= 200
+
+RenderPhoto				= 0
+RenderDropDown			= 0
+RenderName				= 1
+
+AllowBoxArt				= 1
+AllowRVid				= 1
