--- a/romsel_dsimenutheme/nitrofiles/themes/hbLauncher/default/theme.ini
+++ b/romsel_dsimenutheme/nitrofiles/themes/hbLauncher/default/theme.ini
@@ -1,15 +1,15 @@
 [THEME]
-StartBorderRenderY 	= 81
-StartBorderSpriteW 	= 32
+StartBorderRenderY	= 81
+StartBorderSpriteW	= 32
 StartBorderSpriteH	= 80
 StartTextRenderY	= 143
 
-BubbleTipRenderY 	= 80
-BubbleTipRenderX 	= 122
+BubbleTipRenderY	= 80
+BubbleTipRenderX	= 122
 BubbleTipSpriteW	= 11
 BubbleTipSpriteH	= 8
 
-TitleboxRenderY 	= 85
+TitleboxRenderY		= 85
 
 VolumeRenderX		= 4
 VolumeRenderY		= 16
@@ -20,8 +20,13 @@ ShoulderLRenderX	= 0
 ShoulderRRenderY	= 172
 ShoulderRRenderX	= 178
 
-BatteryRenderY 		= 5
+BatteryRenderY		= 5
 BatteryRenderX		= 235
+
+DateRenderY				= 7
+DateRenderX				= 94
+TimeRenderY				= 7
+TimeRenderX				= 134
 
 StartTextUserPalette	= 1
 StartBorderUserPalette	= 1
@@ -29,4 +34,9 @@ ButtonArrowUserPalette	= 1
 MovingArrowUserPalette	= 1
 LaunchDotsUserPalette	= 1
 DialogBoxUserPalette	= 1
-RenderPhoto = 0
+RenderPhoto				= 0
+RenderDropDown			= 0
+RenderName				= 0
+
+AllowBoxArt				= 0
+AllowRVid				= 0
