--- a/romsel_dsimenutheme/nitrofiles/themes/saturn/default/theme.ini
+++ b/romsel_dsimenutheme/nitrofiles/themes/saturn/default/theme.ini
@@ -1,15 +1,15 @@
 [THEME]
-StartBorderRenderY 	= 90
-StartBorderSpriteW 	= 32
+StartBorderRenderY	= 90
+StartBorderSpriteW	= 32
 StartBorderSpriteH	= 80
 StartTextRenderY	= 144
 
-BubbleTipRenderY 	= 80
-BubbleTipRenderX 	= 122
+BubbleTipRenderY	= 80
+BubbleTipRenderX	= 122
 BubbleTipSpriteW	= 11
 BubbleTipSpriteH	= 8
 
-TitleboxRenderY 	= 94
+TitleboxRenderY		= 94
 
 VolumeRenderX		= 4
 VolumeRenderY		= 16
@@ -20,8 +20,13 @@ ShoulderLRenderX	= 0
 ShoulderRRenderY	= 172
 ShoulderRRenderX	= 178
 
-BatteryRenderY 		= 10
+BatteryRenderY		= 10
 BatteryRenderX		= 198
+
+DateRenderY				= 12
+DateRenderX				= 122
+TimeRenderY				= 12
+TimeRenderX				= 162
 
 StartTextUserPalette	= 1
 StartBorderUserPalette	= 1
@@ -29,4 +34,9 @@ ButtonArrowUserPalette	= 1
 MovingArrowUserPalette	= 1
 LaunchDotsUserPalette	= 1
 DialogBoxUserPalette	= 1
-RenderPhoto             = 0	
+RenderPhoto				= 0
+RenderDropDown			= 0
+RenderName				= 0
+
+AllowBoxArt				= 1
+AllowRVid				= 0
