--- a/rungame/Makefile
+++ b/rungame/Makefile
@@ -209,3 +209,7 @@ else
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	make -C arm7 format
+	make -C arm9 format
