--- a/booter/Makefile
+++ b/booter/Makefile
@@ -211,3 +211,7 @@ else
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	make -C arm7 format
+	make -C arm9 format
