--- a/booter_fc/Makefile
+++ b/booter_fc/Makefile
@@ -223,3 +223,7 @@ else
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	make -C arm7 format
+	make -C arm9 format
