--- a/quickmenu/Makefile
+++ b/quickmenu/Makefile
@@ -192,3 +192,7 @@ else
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	make -C arm7 format
+	make -C arm9 format
