--- a/romsel_dsimenutheme/Makefile
+++ b/romsel_dsimenutheme/Makefile
@@ -192,3 +192,7 @@ else
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	make -C arm7 format
+	make -C arm9 format
