--- a/romsel_dsimenutheme/arm7/Makefile
+++ b/romsel_dsimenutheme/arm7/Makefile
@@ -133,3 +133,6 @@ $(OUTPUT).elf	:	$(OFILES) $(LIBNDS)/lib/libnds7.a
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	clang-format -i -style=file $(foreach dir,$(SOURCES),$(wildcard $(dir)/*.c) $(wildcard $(dir)/*.cpp) $(wildcard $(dir)/*.hpp) $(wildcard $(dir)/*.h)) $(foreach dir,$(INCLUDES),$(wildcard $(dir)/*.h) $(wildcard $(dir)/*.hpp))
