--- a/title/Makefile
+++ b/title/Makefile
@@ -210,3 +210,7 @@ else
 #---------------------------------------------------------------------------------------
 endif
 #---------------------------------------------------------------------------------------
+
+format:
+	make -C arm7 format
+	make -C arm9 format
